refactor(ui): extract native component registration into UINativeRegistry
- Create `UINativeRegistry` to handle native model definition, compilation registry mapping, and global environment injection for UI elements (`XplElement`, `XplDocument`, `SuperUiEngine`, `XplEvent`).
- Clean up `SuperUiEngine` initialization by delegating native setup to `UINativeRegistry.inject()`.
- Improve separation of concerns for the UI subsystem startup lifecycle.